bloodc/src/parser/snapshots/bloodc__parser__tests__affine_type_param.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 12,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: Some(
                            Affine,
                        ),
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 20,
                                        end: 28,
                                        start_line: 1,
                                        start_col: 21,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 20,
                                end: 28,
                                start_line: 1,
                                start_col: 21,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 30,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 31,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 30,
                                        end: 38,
                                        start_line: 1,
                                        start_col: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 30,
                                end: 38,
                                start_line: 1,
                                start_col: 31,
                            },
                        },
                        span: Span {
                            start: 13,
                            end: 38,
                            start_line: 1,
                            start_col: 14,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 40,
                            end: 42,
                            start_line: 1,
                            start_col: 41,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
