bloodc/src/parser/snapshots/bloodc__parser__tests__aliased_import.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Simple {
            visibility: Private,
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 8,
                            end: 19,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 21,
                            end: 28,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 28,
                    start_line: 1,
                    start_col: 5,
                },
            },
            alias: Some(
                Spanned {
                    node: SymbolU32 {
                        value: 4,
                    },
                    span: Span {
                        start: 32,
                        end: 35,
                        start_line: 1,
                        start_col: 33,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 36,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
