bloodc/src/parser/snapshots/bloodc__parser__tests__anonymous_record_literal.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Record {
                                    path: None,
                                    fields: [
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 11,
                                                    end: 12,
                                                    start_line: 1,
                                                    start_col: 12,
                                                },
                                            },
                                            value: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 14,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 15,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 14,
                                                        end: 16,
                                                        start_line: 1,
                                                        start_col: 15,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 11,
                                                end: 16,
                                                start_line: 1,
                                                start_col: 12,
                                            },
                                        },
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            value: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 20,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 21,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 22,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 21,
                                                        end: 23,
                                                        start_line: 1,
                                                        start_col: 22,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 18,
                                                end: 23,
                                                start_line: 1,
                                                start_col: 19,
                                            },
                                        },
                                    ],
                                    base: None,
                                },
                                span: Span {
                                    start: 9,
                                    end: 25,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 27,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 27,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 27,
        start_line: 1,
        start_col: 1,
    },
}
