bloodc/src/parser/snapshots/bloodc__parser__tests__associated_type_binding.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 10,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 11,
                                            end: 12,
                                            start_line: 1,
                                            start_col: 12,
                                        },
                                    },
                                    bounds: [
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 14,
                                                                    end: 22,
                                                                    start_line: 1,
                                                                    start_col: 15,
                                                                },
                                                            },
                                                            args: Some(
                                                                TypeArgs {
                                                                    args: [
                                                                        AssocType {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 4,
                                                                                },
                                                                                span: Span {
                                                                                    start: 23,
                                                                                    end: 27,
                                                                                    start_line: 1,
                                                                                    start_col: 24,
                                                                                },
                                                                            },
                                                                            ty: Type {
                                                                                kind: Path(
                                                                                    TypePath {
                                                                                        segments: [
                                                                                            TypePathSegment {
                                                                                                name: Spanned {
                                                                                                    node: SymbolU32 {
                                                                                                        value: 5,
                                                                                                    },
                                                                                                    span: Span {
                                                                                                        start: 30,
                                                                                                        end: 31,
                                                                                                        start_line: 1,
                                                                                                        start_col: 31,
                                                                                                    },
                                                                                                },
                                                                                                args: None,
                                                                                            },
                                                                                        ],
                                                                                        span: Span {
                                                                                            start: 30,
                                                                                            end: 31,
                                                                                            start_line: 1,
                                                                                            start_col: 31,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 30,
                                                                                    end: 31,
                                                                                    start_line: 1,
                                                                                    start_col: 31,
                                                                                },
                                                                            },
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 22,
                                                                        end: 32,
                                                                        start_line: 1,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 14,
                                                        end: 32,
                                                        start_line: 1,
                                                        start_col: 15,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 14,
                                                end: 32,
                                                start_line: 1,
                                                start_col: 15,
                                            },
                                        },
                                    ],
                                    default: None,
                                    span: Span {
                                        start: 11,
                                        end: 32,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 10,
                            end: 33,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 6,
                                    },
                                    span: Span {
                                        start: 34,
                                        end: 38,
                                        start_line: 1,
                                        start_col: 35,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 34,
                                end: 38,
                                start_line: 1,
                                start_col: 35,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 40,
                                                    end: 41,
                                                    start_line: 1,
                                                    start_col: 41,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 40,
                                        end: 41,
                                        start_line: 1,
                                        start_col: 41,
                                    },
                                },
                            ),
                            span: Span {
                                start: 40,
                                end: 41,
                                start_line: 1,
                                start_col: 41,
                            },
                        },
                        span: Span {
                            start: 34,
                            end: 41,
                            start_line: 1,
                            start_col: 35,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 43,
                            end: 45,
                            start_line: 1,
                            start_col: 44,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
